# ElectraLens

./: .deployment-trigger.sh  .deployment-version  .env.example  .gitignore  .vercelignore  DEBUG_GUIDE.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  Dockerfile  PRIVATE_REPO_DEPLOYMENT.md  README.md  REQUIREMENTS_GUIDE.md  SIMPLE_DEPLOY.md  VERCEL_CACHE_CLEAR.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_ENV_VARS.md  VERCEL_FIX.md  VERCEL_FIX_APPLIED.md  VERCEL_FIX_SUMMARY.md  VERCEL_FULLSTACK_GUIDE.md  diagnose.py  electralens-fixed.html  fix_sidebar.py  generate_sample_pdf.py  init_admin.py  init_postgresql.py  login-test.html  pyproject.toml  requirements-render.txt  requirements-streamlit.txt  requirements-vercel.txt  requirements.txt  run_api.py  setup_vercel_env.py  streamlit-deployment.md  streamlit_app.py  test-deployment.sh  test-production.sh  test_auth_api.py  test_deployment.py  (+2 more)
.github/workflows/: deploy-frontend.yml
.streamlit/: config.toml  secrets.example.toml
api/: auth_only.py  index.py  main.py  minimal.py  requirements.txt  test.py
app/: auth_config.py  config.py  crud.py  database.py  init_data.py  logging_config.py  main.py  main_vercel.py  models.py  postgres_auth.py  schemas.py  simple_auth.py
extract/: extractor.py  extractor_vercel.py
public/: README.md  index.html  package.json
web/: index.html
